--- a/client/src/app/pages/genes/genes.component.html
+++ b/client/src/app/pages/genes/genes.component.html
@@ -1,3 +1,55 @@
-<h1>Browse Genes</h1>
-
-<pre>{{ genes$ | async | json }}</pre>
+<div nz-row>
+  <div nz-col nzSpan="12" >
+    <h1>Browse Genes</h1>
+  </div>
+</div>
+<div nz-row>
+  <div nz-col nzSpan="12" >
+    <nz-table #genesTable [nzData]="genes$ | async">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Aliases</th>
+          <th>Diseases</th>
+          <th>Drugs</th>
+          <th>Variants</th>
+          <th>Evidence</th>
+          <th>Assertions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let gene of genesTable.data">
+          <td>{{gene.name}}</td>
+          <td>
+            <span *ngFor="let alias of gene.geneAliases; last as isLast" >
+              {{ alias.name }}{{ isLast ? '' : ', ' }}
+            </span>
+          </td>
+          <td>
+            <span *ngFor="let disease of gene.diseases; last as isLast" >
+             {{ disease.name }}{{ isLast ? '' : ', ' }}
+            </span>
+          </td>
+          <td>
+            <span *ngFor="let drug of gene.drugs; last as isLast" >
+             {{ drug.name }}{{ isLast ? '' : ', ' }}
+            </span>
+          </td>
+          <td>{{gene.variantCount}}</td>
+          <td>{{gene.evidenceItemCount}}</td>
+          <td>{{gene.assertionCount}}</td>
+        </tr>
+      </tbody>
+    </nz-table>
+  </div>
+</div>
+<!-- <div nz-row>
+     <div nz-col nzSpan="8" >
+     <pre>Genes: {{ genes$ | async | json }}</pre>
+     </div>
+     <div nz-col nzSpan="8" >
+     <pre>PageInfo: {{ pageInfo$ | async | json }}</pre>
+     </div>
+     <div nz-col nzSpan="8" >
+     </div>
+     </div> -->
