gene detail link working from browse-table

--- a/client/src/app/pages/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/pages/genes/genes-browse/genes-browse.component.html
@@ -20,7 +20,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let gene of genesTable.data">
-          <td>{{gene.name}}</td>
+          <td>
+            <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
+          </td>
           <td>
             <span *ngFor="let alias of gene.geneAliases; last as isLast" >
               {{ alias.name }}{{ isLast ? '' : ', ' }}
