updated genes-browse query working (building cursor virtual scrolling API)

--- a/client/src/app/pages/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/pages/genes/genes-browse/genes-browse.component.html
@@ -80,7 +80,7 @@
           <pre>Genes: {{ genes$ | async | json }}</pre>
         </div>
         <div nz-col nzSpan="8" >
-          <pre>PageInfo: {{ pageInfo$ | async | json }}</pre>
+          <pre>PageInfo: {{ pageInfo | json }}</pre>
         </div>
         <div nz-col nzSpan="8" >
           <pre>Error:</pre>
