fetchMore kind of working

--- a/client/src/app/pages/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/pages/genes/genes-browse/genes-browse.component.html
@@ -81,6 +81,7 @@
         </div>
         <div nz-col nzSpan="8" >
           <pre>PageInfo: {{ pageInfo | json }}</pre>
+          <button nz-button nzType="primary" (click)="loadMore()">Load More</button>
         </div>
         <div nz-col nzSpan="8" >
           <pre>Error:</pre>
