updated gql, generated client, fetchMore being called but not updating ui

--- a/client/src/app/pages/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/pages/genes/genes-browse/genes-browse.component.html
@@ -80,7 +80,7 @@
           <pre>Genes: {{ genes$ | async | json }}</pre>
         </div>
         <div nz-col nzSpan="8" >
-          <pre>PageInfo: {{ pageInfo | json }}</pre>
+          <pre>PageInfo: {{ pageInfo$ | async | json }}</pre>
           <button nz-button nzType="primary" (click)="loadMore()">Load More</button>
         </div>
         <div nz-col nzSpan="8" >
