--- a/client/src/app/pages/genes/components/my-gene-info/my-gene-info.component.html
+++ b/client/src/app/pages/genes/components/my-gene-info/my-gene-info.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="geneInfo">
   <nz-card style="width: 100%;" nzTitle="MyGeneInfo">
     <nz-card-tab>
-      <nz-tabset nzSize="small" (nzSelectChange)="tabChange($event)">
+      <nz-tabset nzSize="small" (nzSelectChange)="tabChange($event)" [nzAnimated]="true">
         <nz-tab nzTitle="Overview"> </nz-tab>
         <nz-tab nzTitle="Summary"> </nz-tab>
         <nz-tab nzTitle="Protein Domains"></nz-tab>
@@ -12,28 +12,38 @@
       <!-- overview tab -->
       <ng-container *ngSwitchCase="0">
         <div nz-row [nzGutter]="8">
-          <div nz-col [nzSpan]="14">
-            <strong>Entrez Symbol:</strong> {{ info.symbol }} (ID: {{ info._id }})
+          <div nz-col [nzSpan]="6" class="key-col">
+            Entrez Symbol:
           </div>
-          <div nz-col [nzSpan]="10">
-            <strong>UniProtKB ID:</strong> {{ info.uniprot['Swiss-Prot'] }}
-          </div>
-        </div>
-        <div nz-row [nzGutter]="8">
-          <div nz-col [nzSpan]="24">
-            <strong>Aliases: </strong> {{ info.alias.join(', ') }}
+          <div nz-col [nzSpan]="18">
+            {{ info.symbol }} (ID: {{ info._id }})
+            <strong style="margin-left: 8px;">UniProtKB ID:</strong> {{ info.uniprot['Swiss-Prot'] }}
           </div>
         </div>
         <div nz-row [nzGutter]="8">
-          <div nz-col [nzSpan]="24">
-            <strong>Protein Domains: </strong> {{ info.interproList.join(', ') }}
+          <div nz-col [nzSpan]="6" class="key-col">
+            Aliases:
+          </div>
+          <div nz-col [nzSpan]="18">
+            {{ info.alias.join(', ') }}
           </div>
         </div>
-        <!-- <div nz-row [nzGutter]="8">
-             <div nz-col [nzSpan]="24">
-             <strong>Pathways: </strong> {{ info.pathList.join(', ') }}
-             </div>
-             </div> -->
+        <div nz-row [nzGutter]="8">
+          <div nz-col [nzSpan]="6" class="key-col">
+            Protein Domains:
+          </div>
+          <div nz-col [nzSpan]="18">
+            {{ info.interproList.join(', ') }}
+          </div>
+        </div>
+        <div nz-row [nzGutter]="8">
+          <div nz-col [nzSpan]="6" class="key-col">
+            Pathways:
+          </div>
+          <div nz-col [nzSpan]="18">
+            {{ info.pathwayList.join(', ') }}
+          </div>
+        </div>
       </ng-container>
 
       <!-- summary tab -->
