--- a/client/src/app/pages/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/pages/genes/genes-detail/genes-detail.component.html
@@ -1,7 +1,7 @@
-<ng-container *ngIf="{ gene: gene$ | async } as obs">
+<ng-container *ngIf="gene$ | async as gene">
   <nz-page-header class="site-page-header">
-    <nz-page-header-title><i nz-icon nzType="civic:gene"></i> {{ obs.gene?.name }}</nz-page-header-title>
-    <nz-page-header-subtitle>{{ obs.gene?.officialName }}</nz-page-header-subtitle>
+    <nz-page-header-title><i nz-icon nzType="civic:gene"></i> {{ gene.name }}</nz-page-header-title>
+    <nz-page-header-subtitle>{{ gene.officialName }}</nz-page-header-subtitle>
     <nz-page-header-tags>
       <nz-tag [nzColor]="'red'">Flagged</nz-tag>
     </nz-page-header-tags>
@@ -23,14 +23,36 @@
 
     <nz-page-header-content>
       <div class="content">
-        <div nz-row [nzGutter]="16">
-          <div nz-col nzSpan="12">
-            {{ obs.gene?.description }}
-          </div>
-          <div nz-col nzSpan="12" >
-            <cvc-my-gene-info [geneInfo]="myGeneInfo$ | async"></cvc-my-gene-info>
-          </div>
-        </div>
+        <nz-space nzSize="middle" nzDirection="vertical" class="space-align-block">
+          <nz-space-item>
+            <div nz-row [nzGutter]="16">
+              <div nz-col nzSpan="12">
+                <cvc-gene-description
+                  [name]="gene.name"
+                  [description]="gene.description"
+                  [sources]="gene.sources">
+                </cvc-gene-description>
+              </div>
+              <div nz-col nzSpan="12" >
+                <cvc-my-gene-info [geneInfo]="myGeneInfo$ | async"></cvc-my-gene-info>
+              </div>
+            </div>
+          </nz-space-item>
+          <nz-space-item>
+            <div nz-row [nzGutter]="16">
+              <nz-col [nzSpan]="12">
+                <nz-card nzTitle="Comments">
+                  COMMENTS
+                </nz-card>
+              </nz-col>
+              <nz-col [nzSpan]="12">
+                <nz-card nzTitle="Revisions">
+                  REVISIONS
+                </nz-card>
+              </nz-col>
+            </div>
+          </nz-space-item>
+        </nz-space>
       </div>
     </nz-page-header-content>
   </nz-page-header>
