--- a/client/src/app/pages/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/pages/genes/genes-browse/genes-browse.component.html
@@ -36,8 +36,18 @@
     <div nz-row>
       <div class="content">
         <nz-table #genesTable [nzData]="genes$ | async"
-          nzWidth="100%">
+          nzWidth="'100%'">
+          <colgroup>
+            <col width="20%">
+            <col width="20%">
+            <col width="25%">
+            <col width="25%">
+            <col width="3%">
+            <col width="3%">
+            <col width="3%">
+          </colgroup>
           <thead>
+
             <tr>
               <th>Name</th>
               <th>Aliases</th>
@@ -54,19 +64,23 @@
                 <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
               </td>
               <td>
-                <span *ngFor="let alias of gene.geneAliases; last as isLast" >
+                <span *ngFor="let alias of gene.aliases; last as isLast" >
                   {{ alias.name }}{{ isLast ? '' : ', ' }}
                 </span>
               </td>
               <td>
-                <span *ngFor="let disease of gene.diseases; last as isLast" >
-                  {{ disease.name }}{{ isLast ? '' : ', ' }}
-                </span>
+                <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                  <span *ngFor="let disease of gene.diseases; last as isLast" >
+                    {{ disease.name }}{{ isLast ? '' : ', ' }}
+                  </span>
+                </p>
               </td>
               <td>
-                <span *ngFor="let drug of gene.drugs; last as isLast" >
-                  {{ drug.name }}{{ isLast ? '' : ', ' }}
-                </span>
+                <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                  <span *ngFor="let drug of gene.drugs; last as isLast" >
+                    {{ drug.name }}{{ isLast ? '' : ', ' }}
+                  </span>
+                </p>
               </td>
               <td>{{gene.variantCount}}</td>
               <td>{{gene.evidenceItemCount}}</td>
@@ -75,18 +89,18 @@
           </tbody>
         </nz-table>
       </div>
-      <div nz-row>
-        <div nz-col nzSpan="8" >
-          <pre>Genes: {{ genes$ | async | json }}</pre>
-        </div>
-        <div nz-col nzSpan="8" >
-          <pre>PageInfo: {{ pageInfo$ | async | json }}</pre>
-          <button nz-button nzType="primary" (click)="loadMore()">Load More</button>
-        </div>
-        <div nz-col nzSpan="8" >
-          <pre>Error:</pre>
-        </div>
-      </div>
+      <!-- <div nz-row>
+           <div nz-col nzSpan="8" >
+           <pre>Genes: {{ genes$ | async | json }}</pre>
+           </div>
+           <div nz-col nzSpan="8" >
+           <pre>PageInfo: {{ pageInfo$ | async | json }}</pre>
+           <button nz-button nzType="primary" (click)="loadMore()">Load More</button>
+           </div>
+           <div nz-col nzSpan="8" >
+           <pre>Error:</pre>
+           </div>
+           </div> -->
     </div>
   </nz-page-header-content>
 </nz-page-header>
