--- a/client/src/app/pages/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/pages/genes/genes-detail/genes-detail.component.html
@@ -42,6 +42,21 @@
             <div nz-row [nzGutter]="16">
               <nz-col [nzSpan]="12">
                 <nz-card nzTitle="Comments">
+                  <nz-list [nzDataSource]="comments$ | async"
+                    [nzRenderItem]="comment"
+                    [nzItemLayout]="'horizontal'">
+                    <ng-template #comment let-comment>
+                      <nz-comment [nzAuthor]="comment.commentor.name"
+                        [nzDatetime]="comment.createdAt | timeago">
+                        <nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar>
+                        <nz-comment-content>
+                          <p>{{ comment.comment }}</p>
+                        </nz-comment-content>
+                        <nz-comment-action>Reply to</nz-comment-action>
+                      </nz-comment>
+                    </ng-template>
+                  </nz-list>
+                  <!-- old -->
                   <nz-list nzItemLayout="horizontal">
                     <nz-list-item *ngFor="let comment of comments$ | async">
                       <!-- <nz-list-item-meta-title>
