--- a/client/src/app/pages/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/pages/genes/genes-detail/genes-detail.component.html
@@ -42,40 +42,49 @@
             <div nz-row [nzGutter]="16">
               <nz-col [nzSpan]="12">
                 <nz-card nzTitle="Comments">
-                  <nz-list [nzDataSource]="comments$ | async"
+                  <nz-list [nzDataSource]="gene.comments"
                     [nzRenderItem]="comment"
-                    [nzItemLayout]="'horizontal'">
+                    nzSize="small"
+                    nzItemLayout="horizontal">
                     <ng-template #comment let-comment>
-                      <nz-comment [nzAuthor]="comment.commentor.name"
-                        [nzDatetime]="comment.createdAt | timeago">
-                        <nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar>
-                        <nz-comment-content>
-                          <p>{{ comment.comment }}</p>
-                        </nz-comment-content>
-                        <nz-comment-action>Reply to</nz-comment-action>
-                      </nz-comment>
+                      <nz-list-item>
+                        <nz-comment [nzAuthor]="comment.commentor.name"
+                          [nzDatetime]="comment.createdAt | timeago">
+                          <nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar>
+                          <nz-comment-content>
+                            <p>{{ comment.comment }}</p>
+                          </nz-comment-content>
+                          <nz-comment-action>Reply to</nz-comment-action>
+                        </nz-comment>
+                      </nz-list-item>
                     </ng-template>
-                  </nz-list>
-                  <!-- old -->
-                  <nz-list nzItemLayout="horizontal">
-                    <nz-list-item *ngFor="let comment of comments$ | async">
-                      <!-- <nz-list-item-meta-title>
-                           {{ comment.title }}
-                           </nz-list-item-meta-title> -->
-                      <nz-list-item-meta
-                        nzAvatar="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
-                        [nzDescription]="comment.comment">
-                      </nz-list-item-meta>
-                    </nz-list-item>
-                    <!-- <nz-list-empty *ngIf="(comments$ | async).length === 0"></nz-list-empty> -->
                   </nz-list>
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="12">
-                <nz-card nzTitle="Revisions">
-                  REVISIONS
+                <nz-card nzTitle="Revisions" >
+                  <nz-list [nzDataSource]="gene.revisions"
+                    [nzRenderItem]="revision"
+                    nzItemLayout="horizontal">
+                    <ng-template #revision let-revision>
+                      <nz-list-item>
+                        <nz-descriptions [nzTitle]="'Revision ' +  revision.id">
+                          <nz-descriptions-item nzTitle="Created by">{{ revision.revisor.name }} ({{ revision.revisor.username }})</nz-descriptions-item>
+                          <nz-descriptions-item nzTitle="Created on">{{ revision.createdAt | timeago }}</nz-descriptions-item>
+                          <nz-descriptions-item nzTitle="Status">{{ revision.status }}</nz-descriptions-item>
+                        </nz-descriptions>
+                      </nz-list-item>
+                    </ng-template>
+                  </nz-list>
                 </nz-card>
+
               </nz-col>
+            </div>
+          </nz-space-item>
+          <nz-space-item>
+            <div nz-row [nzGutter]="16" >
+              <h4>gene.revisions:</h4>
+              <ngx-json-viewer [json]="gene.revisions"></ngx-json-viewer>
             </div>
           </nz-space-item>
         </nz-space>
@@ -83,18 +92,3 @@
     </nz-page-header-content>
   </nz-page-header>
 </ng-container>
-<!-- <div nz-row>
-     <div nz-col [nzSpan]="12" >
-     <h4>Comments JSON:</h4>
-     <pre>
-     {{ comments$ | async | json }}
-     </pre>
-     </div>
-     <div nz-col [nzSpan]="12" >
-     <h4>Revisions JSON:</h4>
-     <pre>
-     {{ revisions$ | async | json }}
-     </pre>
-     </div>
-
-     </div> -->
