--- a/client/src/app/pages/genes/genes-detail/genes-detail.component.less
+++ b/client/src/app/pages/genes/genes-detail/genes-detail.component.less
@@ -5,3 +5,12 @@
 nz-page-header {
   background-color: white;
 }
+
+.card-list {
+ nz-card {
+   width: 100%;
+   .card-grid-cell {
+     width: 50%;
+   }
+ }
+}
