--- a/client/src/app/components/genes/gene-description-revision/gene-description-revision.component.less
+++ b/client/src/app/components/genes/gene-description-revision/gene-description-revision.component.less
@@ -1,31 +1,85 @@
 :host {
-  display: block;
+    display: block;
 }
 
-.diff-container {
-  .diff {
-    border: 1px solid red;
-    overflow:auto;
-    ul{
-      background:#fff;
-      overflow:auto;
-      font-size:13px;
-      list-style:none;
-      margin:0;
-      padding:0;
-      display:table;
-      width: 100%;
-    }
-    del, .diff ins{display:block;text-decoration:none;}
-    li{padding:0; display:table-row;margin: 0;height:1em;}
-    li.ins{background:#ddf; color:#008}
-    li.del{background:#fee; color:#b00}
-    li:hover{background:#ffc}
-    /* try 'whitespace:pre;' if you don't want lines to wrap */
-    del, .diff ins, .diff span{white-space:pre-wrap;font-family:courier;}
-    del strong{font-weight:normal;background:#fcc;}
-    ins strong{font-weight:normal;background:#99f;}
-    li.diff-comment { display: none; }
-    li.diff-block-info { background: none repeat scroll 0 0 gray; }
-  }
+// .diff {
+//   border: 1px solid red;
+//   overflow:auto;
+//   del, ins{display:block;text-decoration:none;}
+//   .ins{background:#ddf; color:#008}
+//   .del{background:#fee; color:#b00}
+//   // div.diff:hover{background:#ffc}
+//   /* try 'whitespace:pre;' if you don't want lines to wrap */
+//   del, ins,  span{white-space:pre-wrap;font-family:courier;}
+//   del strong{font-weight:normal;background:#fcc;}
+//   ins strong{font-weight:normal;background:#99f;}
+//   .diff-comment { display: none; }
+//   .diff-block-info { background: none repeat scroll 0 0 gray; }
+// }
+.diff {
+    overflow: auto;
+}
+
+.diff .ul {
+    background: #fff;
+    overflow: auto;
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
+    display: table;
+    width: 100%;
+}
+
+.diff del,
+.diff ins {
+    display: block;
+    text-decoration: none;
+}
+
+.diff li {
+    padding: 0;
+    display: table-row;
+    margin: 0;
+    height: 1em;
+}
+
+.diff li.ins {
+    background: #dfd;
+    color: #080
+}
+
+.diff li.del {
+    background: #fee;
+    color: #b00
+}
+
+.diff li:hover {
+    background: #ffc
+}
+
+/* try 'whitespace:pre;' if you don't want lines to wrap */
+
+.diff del,
+.diff ins,
+.diff span {
+    // white-space: pre-wrap;
+    // font-family: courier;
+}
+
+.diff del strong {
+    font-weight: normal;
+    background: #fcc;
+}
+
+.diff ins strong {
+    font-weight: normal;
+    background: #9f9;
+}
+
+.diff li.diff-comment {
+    display: none;
+}
+
+.diff li.diff-block-info {
+    background: none repeat scroll 0 0 gray;
 }
