--- a/client/src/app/views/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.html
@@ -4,7 +4,11 @@
   <!-- <nz-avatar nz-page-header-avatar nzIcon="civic:gene"> </nz-avatar> -->
 
   <!--title-->
-  <nz-page-header-title><i nz-icon nzType="civic:gene"></i> Genes</nz-page-header-title>
+  <nz-page-header-title>
+    <i nz-icon nzType="civic:gene"></i>
+    Genes
+    <span nz-typography nzType="secondary"  *ngIf="(isLoading$ | async)">Loading...</span>
+  </nz-page-header-title>
 
   <!--subtitle-->
   <!-- <nz-page-header-subtitle>This is a subtitle</nz-page-header-subtitle> -->
@@ -33,73 +37,72 @@
 
   <!--content-->
   <nz-page-header-content>
-    <div nz-row>
-      <div class="content">
-        <nz-table #genesTable [nzData]="genes$ | async"
-          nzWidth="'100%'">
-          <colgroup>
-            <col width="20%">
-            <col width="20%">
-            <col width="25%">
-            <col width="25%">
-            <col width="3%">
-            <col width="3%">
-            <col width="3%">
-          </colgroup>
-          <thead>
-
-            <tr>
-              <th>Name</th>
-              <th>Aliases</th>
-              <th>Diseases</th>
-              <th>Drugs</th>
-              <th><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
-              <th><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
-              <th><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let gene of genesTable.data">
-              <td>
-                <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
-              </td>
-              <td>
-                <span *ngFor="let alias of gene.aliases; last as isLast" >
-                  {{ alias.name }}{{ isLast ? '' : ', ' }}
-                </span>
-              </td>
-              <td>
-                <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-                  <span *ngFor="let disease of gene.diseases; last as isLast" >
-                    {{ disease.name }}{{ isLast ? '' : ', ' }}
-                  </span>
-                </p>
-              </td>
-              <td>
-                <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-                  <span *ngFor="let drug of gene.drugs; last as isLast" >
-                    {{ drug.name }}{{ isLast ? '' : ', ' }}
-                  </span>
-                </p>
-              </td>
-              <td>{{gene.variantCount}}</td>
-              <td>{{gene.evidenceItemCount}}</td>
-              <td>{{gene.assertionCount}}</td>
-            </tr>
-          </tbody>
-        </nz-table>
+    <!-- <div nz-row>
+         <div nz-col [nzSpan]="24">
+         <div class="content">
+         <nz-table #genesTable [nzData]="genes$ | async"
+         [nzShowPagination]="false"
+         [nzLoadingDelay]="500"
+         [nzLoading]="loading"
+         [nzLoadingIndicator]="loadingTemplate">
+         <thead>
+         <tr>
+         <th width="10%">Name</th>
+         <th width="20%">Aliases</th>
+         <th width="25%">Diseases</th>
+         <th width="25%">Drugs</th>
+         <th width="3%"><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
+         <th width="3%"><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
+         <th width="3%"><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
+         </tr>
+         </thead>
+         <tbody>
+         <tr *ngFor="let gene of genesTable.data">
+         <td>
+         <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
+         </td>
+         <td>
+         <span *ngFor="let alias of gene.aliases; last as isLast" >
+         {{ alias.name }}{{ isLast ? '' : ', ' }}
+         </span>
+         </td>
+         <td>
+         <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+         <span *ngFor="let disease of gene.diseases; last as isLast" >
+         {{ disease.name }}{{ isLast ? '' : ', ' }}
+         </span>
+         </p>
+         </td>
+         <td>
+         <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+         <span *ngFor="let drug of gene.drugs; last as isLast" >
+         {{ drug.name }}{{ isLast ? '' : ', ' }}
+         </span>
+         </p>
+         </td>
+         <td>{{gene.variantCount}}</td>
+         <td>{{gene.evidenceItemCount}}</td>
+         <td>{{gene.assertionCount}}</td>
+         </tr>
+         </tbody>
+         </nz-table>
+         <ng-template #loadingTemplate><i nz-icon nzType="loading"></i></ng-template>
+         </div>
+         </div>
+         </div> -->
+    <div nz-row *ngIf="data$ | async">
+      <div nz-col nzSpan="6">
+        <h4>data$:</h4>
+        <ngx-json-viewer [json]="data$ | async"></ngx-json-viewer>
       </div>
-      <!-- <div nz-row>
-           <div nz-col nzSpan="8" >
-           <pre>Genes: {{ genes$ | async | json }}</pre>
-           </div>
-           <div nz-col nzSpan="8" >
-           <pre>PageInfo: {{ pageInfo$ | async | json }}</pre>
-           <button nz-button nzType="primary" (click)="loadMore()">Load More</button>
-           </div>
-           <div nz-col nzSpan="8" >
-           <pre>Error:</pre>
-           </div>
+      <!-- <div nz-col nzSpan="6">
+           <h4>genes$</h4>
+           <p><button nz-button nzType="primary" (click)="loadMore()">Load More</button></p>
+           <ngx-json-viewer [json]="genes$ | async"></ngx-json-viewer>
+           </div> -->
+      <!-- <div nz-col nzSpan="6">
+           <h4>pageInfo$</h4>
+           <ngx-json-viewer [json]="pageInfo$ | async"></ngx-json-viewer>
            </div> -->
     </div>
   </nz-page-header-content>
