--- a/client/src/app/views/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.html
@@ -37,73 +37,75 @@
 
   <!--content-->
   <nz-page-header-content>
-    <!-- <div nz-row>
-         <div nz-col [nzSpan]="24">
-         <div class="content">
-         <nz-table #genesTable [nzData]="genes$ | async"
-         [nzShowPagination]="false"
-         [nzLoadingDelay]="500"
-         [nzLoading]="loading"
-         [nzLoadingIndicator]="loadingTemplate">
-         <thead>
-         <tr>
-         <th width="10%">Name</th>
-         <th width="20%">Aliases</th>
-         <th width="25%">Diseases</th>
-         <th width="25%">Drugs</th>
-         <th width="3%"><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
-         <th width="3%"><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
-         <th width="3%"><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
-         </tr>
-         </thead>
-         <tbody>
-         <tr *ngFor="let gene of genesTable.data">
-         <td>
-         <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
-         </td>
-         <td>
-         <span *ngFor="let alias of gene.aliases; last as isLast" >
-         {{ alias.name }}{{ isLast ? '' : ', ' }}
-         </span>
-         </td>
-         <td>
-         <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-         <span *ngFor="let disease of gene.diseases; last as isLast" >
-         {{ disease.name }}{{ isLast ? '' : ', ' }}
-         </span>
-         </p>
-         </td>
-         <td>
-         <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-         <span *ngFor="let drug of gene.drugs; last as isLast" >
-         {{ drug.name }}{{ isLast ? '' : ', ' }}
-         </span>
-         </p>
-         </td>
-         <td>{{gene.variantCount}}</td>
-         <td>{{gene.evidenceItemCount}}</td>
-         <td>{{gene.assertionCount}}</td>
-         </tr>
-         </tbody>
-         </nz-table>
-         <ng-template #loadingTemplate><i nz-icon nzType="loading"></i></ng-template>
-         </div>
-         </div>
-         </div> -->
-    <div nz-row *ngIf="data$ | async">
+    <div nz-row>
+      <div nz-col [nzSpan]="24">
+        <div class="content">
+          <nz-table #genesTable
+            [nzShowPagination]="false"
+            [nzData]="(genes$ | async)"
+            [nzLoading]="(isLoading$ | async)"
+            [nzLoadingIndicator]="loadingTemplate">
+            <thead>
+              <tr>
+                <th width="10%">Name</th>
+                <th width="20%">Aliases</th>
+                <th width="25%">Diseases</th>
+                <th width="25%">Drugs</th>
+                <th width="3%"><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
+                <th width="3%"><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
+                <th width="3%"><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let gene of genesTable.data">
+                <td>
+                  <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
+                </td>
+                <td>
+                  <span *ngFor="let alias of gene.aliases; last as isLast" >
+                    {{ alias.name }}{{ isLast ? '' : ', ' }}
+                  </span>
+                </td>
+                <td>
+                  <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                    <span *ngFor="let disease of gene.diseases; last as isLast" >
+                      {{ disease.name }}{{ isLast ? '' : ', ' }}
+                    </span>
+                  </p>
+                </td>
+                <td>
+                  <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                    <span *ngFor="let drug of gene.drugs; last as isLast" >
+                      {{ drug.name }}{{ isLast ? '' : ', ' }}
+                    </span>
+                  </p>
+                </td>
+                <td>{{gene.variantCount}}</td>
+                <td>{{gene.evidenceItemCount}}</td>
+                <td>{{gene.assertionCount}}</td>
+              </tr>
+            </tbody>
+          </nz-table>
+          <ng-template #loadingTemplate><i nz-icon nzType="loading"></i></ng-template>
+        </div>
+      </div>
+    </div>
+    <div nz-row>
       <div nz-col nzSpan="6">
         <h4>data$:</h4>
-        <ngx-json-viewer [json]="data$ | async"></ngx-json-viewer>
+        <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data"></ngx-json-viewer>
       </div>
-      <!-- <div nz-col nzSpan="6">
-           <h4>genes$</h4>
-           <p><button nz-button nzType="primary" (click)="loadMore()">Load More</button></p>
-           <ngx-json-viewer [json]="genes$ | async"></ngx-json-viewer>
-           </div> -->
-      <!-- <div nz-col nzSpan="6">
-           <h4>pageInfo$</h4>
-           <ngx-json-viewer [json]="pageInfo$ | async"></ngx-json-viewer>
-           </div> -->
+      <div nz-col nzSpan="6">
+        <h4>genes$</h4>
+        <p><button nz-button nzType="primary" (click)="loadMore()">Load More</button></p>
+        <ngx-json-viewer *ngIf="(genes$ | async) as genes" [json]="genes"></ngx-json-viewer>
+      </div>
+      <div nz-col nzSpan="6">
+        <h4>pageInfo$</h4>
+        <p *ngIf="(totalCount$ | async) as totalCount">Total Count: {{ totalCount }}</p>
+        <p *ngIf="(totalPageCount$ | async) as totalPageCount">Total Page Count: {{ totalPageCount }}</p>
+        <ngx-json-viewer *ngIf="(pageInfo$ | async) as pageInfo" [json]="pageInfo"></ngx-json-viewer>
+      </div>
     </div>
   </nz-page-header-content>
 </nz-page-header>
