--- a/client/src/app/views/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.html
@@ -93,18 +93,18 @@
     <div nz-row>
       <div nz-col nzSpan="8">
         <h4>data$:</h4>
-        <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data"></ngx-json-viewer>
+        <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
       </div>
       <div nz-col nzSpan="8">
         <h4>genes$</h4>
         <p><button nz-button nzType="primary" (click)="loadMore()">Load More</button></p>
-        <ngx-json-viewer *ngIf="(genes$ | async) as genes" [json]="genes"></ngx-json-viewer>
+        <ngx-json-viewer *ngIf="(genes$ | async) as genes" [json]="genes" [expanded]="false"></ngx-json-viewer>
       </div>
       <div nz-col nzSpan="8">
         <h4>pageInfo$</h4>
         <p *ngIf="(totalCount$ | async) as totalCount">Total Count: {{ totalCount }}</p>
         <p *ngIf="(totalPageCount$ | async) as totalPageCount">Total Page Count: {{ totalPageCount }}</p>
-        <ngx-json-viewer *ngIf="(pageInfo$ | async) as pageInfo" [json]="pageInfo"></ngx-json-viewer>
+        <ngx-json-viewer *ngIf="(pageInfo$ | async) as pageInfo" [json]="pageInfo" [expanded]="false"></ngx-json-viewer>
       </div>
     </div>
   </nz-page-header-content>
